--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.10.8",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "socket.io": "^0.9.19"
   },
   "devDependencies": {},
